--- a/Aula 01-03/ex014.html
+++ b/Aula 01-03/ex014.html
@@ -12,12 +12,12 @@
     <form action="ex013.php" method="get"> <!--o method diz qual a forma do envio da informação pro script em php-->
 
         Nota 1: <br>
-        <input type="text" name="nota1">
+        <input type="number" name="nota1" min="6" max="8"> <!--Da pra burlar mudando direto na URL-->
 
         <br><br>
 
         Nota 2: <br>
-        <input type="text" name="nota2" id="">
+        <input type="number" name="nota2" id="" min="6" max="8">
 
         <br><br>
 
