--- a/CRUDBasicoFuncoes/index.html
+++ b/CRUDBasicoFuncoes/index.html
@@ -2,33 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CRUD - Controle de alunos</title>
-
+    <title>CRUD - Controle de Funcionários</title>
     <style>
-        div {
-            border: 2px solid black;
-            width: 25%;
-            padding-left: 20%;
-            padding-bottom: 3%;
-            padding-top: 3%;
-            margin-left: 25%;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            margin: 0;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
         h2 {
-            margin-left: 40%;
+            margin-top: 20px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        input[type="button"] {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 10px 0;
+        }
+
+        input[type="button"]:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
+    <header>
+        <h1>CRUD - Controle de Funcionários</h1>
+    </header>
 
-  <h2>Controle de Alunos</h2>
-  <div>
-      <form>
-          <input type="button" value="Cadastrar"
-                 onclick="window.open('cadastra.php', '_top');"><br><br>
-          <input type="button" value="Consultar"
-                 onclick="window.open('consulta.php', '_top');">
-      </form>
-  </div>
-
+    <div class="container">
+        <h2>Menu</h2>
+        <form>
+            <input type="button" value="Cadastrar" onclick="window.open('cadastra.php', '_top');">
+            <input type="button" value="Consultar" onclick="window.open('consulta.php', '_top');">
+        </form>
+    </div>
 </body>
 </html>
